# Votos_universidadContinental

./: .gitignore  README.md  pyproject.toml  render.yaml  seed_db.py
src/: database.py  main.py
src/apis/: __init__.py  auth_router.py  candidato_router.py  usuario_router.py  voto_router.py
src/models/: candidato_model.py  usuario_model.py  voting_location_model.py  voto_model.py
src/repositories/: candidato_repository.py  usuario_repository.py  voting_location_repository.py  voto_repository.py
src/schemas/: auth_schema.py  candidato_schema.py  result_schema.py  usuario_schema.py  voto_schema.py
src/services/: auth_service.py  candidato_service.py  geo_service.py  usuario_service.py  voto_service.py
