[project]
name = "backend"
version = "0.1.0"
description = "Sistema de votación para elección de delegado universitario"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.9",
    "python-dotenv>=1.0.0",
    "pydantic[email]>=2.6.0",
    "firebase-admin>=6.0.0",
]

[tool.uv]
package = false
